[feature][refactor] Clean up code by removing unused comments, improving logging messages, and enhancing readability with modern Java features